<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/event"
        android:icon="@drawable/event_24dp"
        android:title="@string/event"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/job"
        android:icon="@drawable/baseline_work_24"
        android:title="@string/job"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/wall"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/wall"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/signout"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_exit_to_app_24"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />


</menu>


