<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing">

            <!-- Author's Avatar -->
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/posts_avatar_size"
                android:layout_height="@dimen/posts_avatar_size"
                android:contentDescription="@string/description_post_author_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@sample/posts.json/data/authorAvatar" />

            <!-- Author's Name -->
            <TextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:ellipsize="end"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/authorJob"
                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Автор события" />

            <TextView
                android:id="@+id/published"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"


                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toBottomOf="@+id/authorJob"
                tools:text="@sample/posts.json/data/published" />

            <TextView
                android:id="@+id/datetimeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"


                android:textStyle="bold"

                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"

                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toBottomOf="@id/published"

                tools:text="Дата проведения события" />

            <TextView
                android:id="@+id/datetime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"

                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toBottomOf="@id/datetimeTitle"
                app:layout_constraintBottom_toTopOf="@+id/type"
                tools:text="Дата проведения" />

            <TextView
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"

                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toBottomOf="@id/datetime"
                app:layout_constraintBottom_toBottomOf="@+id/header"
                tools:text="Тип проведения конференции" />

            <TextView
                android:id="@+id/authorJob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"

                android:layout_marginBottom="@dimen/common_spacing"
                app:layout_constraintTop_toBottomOf="@+id/author"
                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintStart_toEndOf="@id/avatar"

                tools:text="Job" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_spacing"
                android:contentDescription="@string/description_post_menu"
                app:icon="@drawable/ic_more_vert_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.AppTheme.IconButton" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="avatar,published,menu" />

            <TextView
                android:id="@+id/content"
                android:layout_width="380dp"
                android:layout_height="128dp"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.5"
                android:paddingTop="@dimen/common_spacing"
                android:paddingStart="16dp"
                android:paddingBottom="@dimen/common_spacing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                tools:text="Всем привет! Кто хочет увидеть котиков присоединяйтесь к событию "
                tools:ignore="RtlSymmetry" />


            <TextView
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.5"
                android:layout_marginTop="4dp"
                android:paddingStart="16dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintBottom_toBottomOf="@+id/footer"
                tools:text="http://netolo.gy/fyb"
                tools:ignore="RtlSymmetry" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="content" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/common_spacing"
                android:contentDescription="@string/attachment"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/footer" />

            <TextView
                android:id="@+id/participantsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Участники"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />

            <!-- Participants List -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/participantsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/participantsTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/item_participant" />

            <!-- Like Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/description_post_like"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/participantsList"
                app:icon="@drawable/ic_like_24dp"

                style="@style/Widget.AppTheme.LikeCheckBox" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>